Fixed columns positions to fit the screen correctly and centered. Need to add some fixes with a title font spacing from ellipsis settings.

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -23,11 +23,14 @@
   line-height: 100%;
   display: -webkit-box;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  flex-shrink: 9;
   -webkit-box-orient: vertical;
   max-width: 288px;
 }
+
 .card__like-btn {
   background-image: url("../images/heart.svg");
   width: 23px;
@@ -41,4 +44,17 @@
   color: #212121cc;
   opacity: 80%;
   cursor: pointer;
+}
+
+@media screen and (max-width: 320px) {
+  .card {
+    width: 288px;
+  }
+  .card__image {
+    width: 288px;
+    height: 288px;
+  }
+  .card__title {
+    font-size: 16px;
+  }
 }
