--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,8 +10,18 @@
   max-width: 1280px;
   display: grid;
   justify-content: center;
-  align-content: center;
-  grid-template-columns: repeat(auto-fill, 288px);
+  justify-items: center;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px 20px;
   border-bottom: 1px solid #212121;
+}
+
+@media (max-width: 627px) {
+  .cards__list {
+    grid-template-columns: 1fr;
+    display: grid;
+    justify-content: center;
+    gap: 16px;
+    padding: 0 8px;
+  }
 }
